--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -219,23 +219,52 @@ th {
 
 .dashboard {
   width: 100%;
-  height: 100vmax;
+  min-height: 100vh;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 298px 1fr;
       grid-template-columns: 298px 1fr;
-  -ms-grid-rows: auto calc(100vmax - 60px);
-      grid-template-rows: auto calc(100vmax - 60px);
-      grid-template-areas: "strip strip" "sidebar panels";
+  -ms-grid-rows: 60px 100px calc(100vh - 60px);
+      grid-template-rows: 60px 100px calc(100vh - 60px);
+      grid-template-areas: "controls controls" "sidebar keypoints" "sidebar panels";
 }
 
 .control-strip {
-  position: relative;
-  z-index: 4;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
-  grid-area: strip;
+  grid-area: controls;
+  position: relative;
+  z-index: 8;
+}
+
+.sidebar {
+  min-height: calc(100vh - 60px);
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: sidebar;
+  position: relative;
+  z-index: 6;
+}
+
+.key-points {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: keypoints;
+  z-index: 4;
+  position: relative;
+}
+
+.display-panels {
+  min-height: calc(100vh - 60px);
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: panels;
+  background: #efefef;
+}
+
+.control-strip {
   -webkit-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
@@ -258,29 +287,132 @@ th {
   margin-left: 1rem;
 }
 
-.sidebar {
-  position: relative;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  grid-area: sidebar;
-  width: 298px;
-  height: 100vmax;
-  -webkit-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.35);
-          box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.35);
-  padding: 2rem;
-}
-
-.panels {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  grid-area: panels;
-  background-color: #f4f4f4;
-}
-
-.key-points {
+.user-controls {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 1.25rem;
+}
+
+.panel-heading h2 {
+  font-size: 2.5rem;
+  text-align: center;
+  padding: 2rem 0 0;
+}
+
+.panel-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 2rem;
+  margin: 3rem auto;
+}
+
+.manager {
+  background: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-shadow: 0 0 2px 1px rgba(136, 132, 132, 0.12);
+          box-shadow: 0 0 2px 1px rgba(136, 132, 132, 0.12);
+  margin-bottom: 1.5rem;
+}
+
+.manager img {
+  height: 136px;
+}
+
+.manager ul {
+  padding: 1rem 1rem 0;
+}
+
+.manager li {
+  margin: 0.5rem 0;
+  color: #acb3bf;
+}
+
+.manager li:nth-child(1) {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  color: #0c343d;
+}
+
+.employees img {
+  width: 100px;
+}
+
+.employees ul {
+  width: 720px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+  -webkit-box-shadow: 0 0 2px 1px rgba(175, 173, 173, 0.15);
+          box-shadow: 0 0 2px 1px rgba(175, 173, 173, 0.15);
+  background-color: #fff;
+}
+
+.employees label {
+  font-size: 11px;
+  color: #7f8687;
+  margin-left: 0.3rem;
+  padding-bottom: 0.3rem;
+}
+
+.employees input {
+  width: 100%;
+  color: #0c343d;
+  border-radius: 4px;
+  padding: 0.5rem;
+  border: none;
+  font-size: 13px;
+  outline: none;
+  background-color: #f5fafb;
+  -webkit-box-shadow: 0 0 2px 0 #b9b9b9;
+          box-shadow: 0 0 2px 0 #b9b9b9;
+}
+
+.employees li:nth-child(4) input {
+  width: 75px;
+}
+
+.employees li:nth-child(5) input {
+  width: 75px;
+}
+
+.employee {
+  margin: 0 0 1rem;
+}
+
+.controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.5rem;
+  margin-right: 1.5rem;
+}
+
+.controls img {
+  opacity: 0.5;
+  width: 1.125rem;
+  margin-right: 0.25rem;
+}
+
+.key-points {
   background-color: #ffffff;
 }
 
@@ -304,6 +436,12 @@ th {
           box-shadow: inset 1px 1px 0 rgba(98, 87, 87, 0.1), inset 0 -1px 0 rgba(0, 0, 0, 0.2);
 }
 
+.points {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .point h3 {
   font-size: 14px;
   font-weight: bold;
@@ -314,71 +452,26 @@ th {
   color: tomato;
 }
 
-.user-controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 1.25rem;
+.sidebar {
+  color: #0c343d;
+  position: relative;
+  width: 298px;
+  -webkit-box-shadow: inset 1px 1px 0 rgba(98, 87, 87, 0.1), inset 0 -1px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: inset 1px 1px 0 rgba(98, 87, 87, 0.1), inset 0 -1px 0 rgba(0, 0, 0, 0.2);
+  padding: 6rem 2rem 0;
 }
 
-.user-avitar {
-  text-align: center;
+.sidebar header {
+  font-size: 1.5rem;
 }
 
-.user-avitar figcaption {
-  font-size: 12px;
+.sidebar ul {
+  padding-left: 0.25rem;
+  color: #acb3bf;
 }
 
-.groups {
-  margin-top: 2rem;
-}
-
-.groups h4 {
-  font-weight: bold;
-  font-size: 1.25rem;
-}
-
-.groups li {
-  margin-bottom: 13px;
+.sidebar li {
+  margin: 1rem 0;
   cursor: pointer;
-}
-
-.search label {
-  display: block;
-  font-size: 12px;
-  margin-bottom: 0.15rem;
-}
-
-.search .search-field {
-  -webkit-box-shadow: 0 0 2px 0 grey;
-          box-shadow: 0 0 2px 0 grey;
-  border-radius: 4px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: hidden;
-}
-
-.search .search-field input {
-  width: 100%;
-  padding: 0.25rem 0.5rem;
-  border: none;
-  outline: none;
-}
-
-.search .search-icon {
-  width: 3.5rem;
-  padding: 0.1rem 0.5rem;
-  border-left: 1px solid #c5c5c5;
-  text-align: center;
-  background-color: #f1f1f1;
-  cursor: pointer;
-}
-
-.search img {
-  width: 1.25rem;
-}
-.errors {
-  color:red;
 }
 /*# sourceMappingURL=styles.css.map */
